Use slightly higher min height on modal description to avoid height shift when changing options on small screens.

--- a/client/my-sites/themes/auto-loading-homepage-modal.scss
+++ b/client/my-sites/themes/auto-loading-homepage-modal.scss
@@ -42,7 +42,7 @@
 
 .themes__autoloading-homepage-option-description {
 	font-size: $font-body-small;
-	min-height: 80px;
+	min-height: 90px;
 
 	@include break-medium {
 		width: 70%;
